Launch scripts updated.